--- a/src/plugs/Scripts/Source/Scripts.vcxproj.filters
+++ b/src/plugs/Scripts/Source/Scripts.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>Source Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ISystemFunction64.asm" />
+  </ItemGroup>
 </Project>
