--- a/src/plugs/Scripts/Source/Scripts.vcxproj.filters
+++ b/src/plugs/Scripts/Source/Scripts.vcxproj.filters
@@ -62,8 +62,6 @@
     <CustomBuild Include="Scripts.def">
       <Filter>Source Files</Filter>
     </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ISystemFunction64.asm" />
+    <CustomBuild Include="ISystemFunction64.asm" />
   </ItemGroup>
 </Project>
