--- a/src/plugs/Coder/Source/Resources/Coder.rc
+++ b/src/plugs/Coder/Source/Resources/Coder.rc
@@ -267,7 +267,7 @@ BEGIN
     CONTROL         "HotKey1",IDC_AUTOCOMPLETE_SETUP_HOTKEY_COMPLETEPREV,
                     "msctls_hotkey32",WS_BORDER | WS_TABSTOP,241,61,60,14
     GROUPBOX        "",IDC_AUTOCOMPLETE_SETUP_DOCUMENTWORDS_GROUP,9,89,300,
-                    59,WS_GROUP
+                    73,WS_GROUP
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_ADDDOCUMENTWORDS,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,17,103,286,10
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_MAXDOCUMENT_ENABLE,"Button",
@@ -277,13 +277,15 @@ BEGIN
     LTEXT           "",IDC_AUTOCOMPLETE_SETUP_MAXDOCUMENT_POSTLABEL,185,119,
                     116,8
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_COMPLETENONSYNTAXDOCUMENT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,30,134,273,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,30,133,273,10
+    CONTROL         "",IDC_AUTOCOMPLETE_SETUP_SAVETYPEDCASE,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,43,147,260,10
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_ADDHIGHLIGHTWORDS,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,9,159,299,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,9,168,299,10
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_RIGHTDELIMITERS_ENABLE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,9,172,299,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,9,181,299,10
     CONTROL         "",IDC_AUTOCOMPLETE_SETUP_SYNTAXDELIMITERS_ENABLE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,9,184,299,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,9,194,299,10
 END
 
 
@@ -329,11 +331,6 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO DISCARDABLE 
 BEGIN
-    IDD_GENERAL_SETUP, DIALOG
-    BEGIN
-        BOTTOMMARGIN, 194
-    END
-
     IDD_CODEFOLD1_SETUP, DIALOG
     BEGIN
         BOTTOMMARGIN, 194
