--- a/src/akelpad-src/AkelEdit/akeledit.vcxproj
+++ b/src/akelpad-src/AkelEdit/akeledit.vcxproj
@@ -18,6 +18,36 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AkelEdit.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resources\AkelEdit.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hand.cur" />
+    <None Include="Resources\Margin.cur" />
+    <None Include="Resources\MBottom.cur" />
+    <None Include="Resources\MCenterAll.cur" />
+    <None Include="Resources\MCenterLeftRight.cur" />
+    <None Include="Resources\MCenterTopBottom.cur" />
+    <None Include="Resources\MLeft.cur" />
+    <None Include="Resources\MLeftBottom.cur" />
+    <None Include="Resources\MLeftTop.cur" />
+    <None Include="Resources\MRight.cur" />
+    <None Include="Resources\MRightBottom.cur" />
+    <None Include="Resources\MRightTop.cur" />
+    <None Include="Resources\MTop.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\MCenterAll.bmp" />
+    <Image Include="Resources\MCenterLeftRight.bmp" />
+    <Image Include="Resources\MCenterTopBottom.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Resources\resource.h" />
+    <ClInclude Include="Resources\version.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
@@ -89,7 +119,7 @@
       <Optimization>MinSpace</Optimization>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WIN32;NDEBUG;RC_VERSIONLANGID=0x409;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;RC_VERSIONLANGID=0x409;CINTERFACE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Midl>
@@ -121,7 +151,7 @@
       <Optimization>MinSpace</Optimization>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WIN32;NDEBUG;RC_VERSIONLANGID=0x409;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;RC_VERSIONLANGID=0x409;CINTERFACE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Midl>
@@ -152,7 +182,7 @@
       <WarningLevel>Level3</WarningLevel>
       <MinimalRebuild>true</MinimalRebuild>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <PreprocessorDefinitions>WIN32;DEBUG;RC_VERSIONLANGID=0x409;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;DEBUG;RC_VERSIONLANGID=0x409;CINTERFACE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
@@ -186,7 +216,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <PreprocessorDefinitions>WIN32;DEBUG;RC_VERSIONLANGID=0x409;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;DEBUG;RC_VERSIONLANGID=0x409;CINTERFACE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
@@ -211,26 +241,6 @@
       <AdditionalDependencies>comctl32.lib;imm32.lib;version.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="AkelEdit\AkelEdit.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="AkelFiles\Langs\Resources\AkelPad.ico" />
-    <Image Include="AkelFiles\Langs\Resources\Empty.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="AkelFiles\Langs\Resources\DragMove.cur" />
-    <CustomBuild Include="AkelFiles\Langs\Resources\HandClose.cur" />
-    <CustomBuild Include="AkelFiles\Langs\Resources\HandOpen.cur" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="AkelFiles\Langs\Resources\English.rc">
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">AkelFiles\Langs\Resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AkelFiles\Langs\Resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AkelFiles\Langs\Resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">AkelFiles\Langs\Resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ResourceCompile>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
