--- a/src/plugs/SpecialChar/Source/Resources/SpecialChar.rc
+++ b/src/plugs/SpecialChar/Source/Resources/SpecialChar.rc
@@ -43,12 +43,12 @@ IDI_ICON_PLUGIN         ICON    DISCARDABLE     "SpecialChar.ico"
 // Dialog
 //
 
-IDD_SETUP DIALOGEX 70, 70, 395, 204
+IDD_SETUP DIALOGEX 70, 70, 395, 220
 STYLE DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg"
 BEGIN
-    LISTBOX         IDC_LIST,10,11,109,163,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | 
+    LISTBOX         IDC_LIST,10,11,109,180,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | 
                     WS_TABSTOP
     LTEXT           "",IDC_NAME_LABEL,133,12,117,8
     EDITTEXT        IDC_NAME_EDIT,131,25,119,14,ES_AUTOHSCROLL
@@ -64,7 +64,12 @@ BEGIN
     COMBOBOX        IDC_OLDCHARSPECIAL_COMBO,151,119,90,58,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_SOLIDINDENTLINE_CHECK,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,131,152,117,10
+                    WS_TABSTOP,131,150,117,10
+    LTEXT           "",IDC_INDENTLINESIZE_LABEL,131,166,36,8
+    EDITTEXT        IDC_INDENTLINESIZE_EDIT,131,177,21,13,ES_NUMBER
+    CONTROL         "Spin1",IDC_INDENTLINESIZE_SPIN,"msctls_updown32",
+                    UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,153,
+                    177,11,13
     GROUPBOX        "",IDC_NEWCHAR_GROUP,263,12,119,161
     LTEXT           "",IDC_NEWCHARHEX_LABEL,273,28,101,8
     LTEXT           "\\x",IDC_NEWCHARHEXPREFIX_LABEL,279,43,8,8
@@ -90,12 +95,12 @@ BEGIN
     LTEXT           "",IDC_NEWCHARFONTSTYLE_LABEL,275,138,100,8
     COMBOBOX        IDC_NEWCHARFONTSTYLE_COMBO,273,150,98,58,
                     CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "",IDC_ADDMODIFY_BUTTON,12,183,50,14,BS_CENTER
-    PUSHBUTTON      "",IDC_DELETE_BUTTON,66,183,50,14,BS_CENTER
     CONTROL         "",IDC_CODERTHEME_CHECK,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,131,165,117,10
-    DEFPUSHBUTTON   "",IDOK,273,183,50,14,BS_CENTER
-    PUSHBUTTON      "",IDCANCEL,327,183,50,14,BS_CENTER
+                    WS_TABSTOP,263,180,117,10
+    PUSHBUTTON      "",IDC_ADDMODIFY_BUTTON,12,200,50,14,BS_CENTER
+    PUSHBUTTON      "",IDC_DELETE_BUTTON,66,200,50,14,BS_CENTER
+    DEFPUSHBUTTON   "",IDOK,273,200,50,14,BS_CENTER
+    PUSHBUTTON      "",IDCANCEL,327,200,50,14,BS_CENTER
 END
 
 
