Upgrade to new version.

--- a/src/plugs/Coder/Source/Resources/Coder.rc
+++ b/src/plugs/Coder/Source/Resources/Coder.rc
@@ -69,8 +69,8 @@ BEGIN
     CONTROL         "List1",IDC_GENERAL_VARTHEME_LIST,"SysListView32",
                     LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | 
                     LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,9,38,299,147
-    CONTROL         "",IDC_GENERAL_CACHE_ENABLE,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,9,193,100,10
+    COMBOBOX        IDC_GENERAL_CACHE,9,192,99,174,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_GENERAL_DEFAULTALIAS_ENABLE,"Button",
                     BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_RIGHT | WS_TABSTOP,
                     114,193,150,10
